--- a/Mongodb.yaml
+++ b/Mongodb.yaml
@@ -23,8 +23,8 @@
       path: /etc/mongod.conf
       regexp: '127.0.0.1'
       replace: '0.0.0.0'
-      
+
   - name: restaring the mongod
     ansible.builtin.service:
       name: mongod
-      state: restated
+      state: restarted
