--- a/catalouge.yaml
+++ b/catalouge.yaml
@@ -26,7 +26,7 @@
       remote_src: yes
 
   - name: installing npm
-    ansible.builtin.shell: npm install 
+    ansible.builtin.shell: "npm install"
 
   - name: Copy file 
     ansible.builtin.copy:
