--- a/catalouge.yaml
+++ b/catalouge.yaml
@@ -27,6 +27,8 @@
 
   - name: installing npm
     ansible.builtin.shell: "npm install"
+      args: 
+        chdir: /app
 
   - name: Copy file 
     ansible.builtin.copy:
