--- a/catalouge.yaml
+++ b/catalouge.yaml
@@ -36,8 +36,7 @@
       dest: /etc/systemd/system/catalogue.service
 
   - name: Restart catalogue.service
-    ansible.builtin.systemd_service:
-      state: restarted
+    ansible.builtin.systemd:
       daemon_reload: true
 
   - name: enabled and start catalogue
